tests/invalid/in_unsupported_type/main.py
x: int = 10
y: bool = 5 in x
